Task-9/deployment-a.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-a-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: itemapp
  template:
    metadata:
      labels:
        app: itemapp
    spec:
      containers:
      - name: item-service-a-container
        image: akbargolpa/task9-service-a-iso
        ports:
        - containerPort: 8001
