Task-9/main-service.yml
apiVersion: v1
kind: Service
metadata:
  name: deployment-service
spec:
  type: LoadBalancer
  selector:
    app: itemapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
